@@ -63,6 +63,8 @@ Version 1.3.6+svn:
     * The 'more' and 'help' button in the title screen now have a tooltip.
     * Added a hotkey for clearing the chat messages.
     * Fixed the black corners on some maps.
+    * There's a new "Game Settings" window which shows the basic game settings
+      (accessible through the "More" button in the "Status Table").
 
   * Miscellaneous
     * Isle of Anduin renamed to Isle of Alduin to avoid copyright problems.
