@@ -102,6 +102,8 @@ Version 1.3.6+svn:
      undo, attack dialog or right-click cancel
    * need only one right-click to open context-menu on an unselected enemy
    * selecting an enemy doesn't directly cancel its reachable zone
+   * there's a new "Game Settings" window which shows the basic game settings
+     for each player, accessible through the "More" button in the "Status Table"
  * WML engine:
    * now [base_unit]id= inside [unit] can extend upon existing unit types
    * new tag [filter_radius] to allow greater control over radius expansion
